[package]
name = "atcoder-by-difficulty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alga = "=0.9.3"
ascii = "=1.0.0"
bitset-fixed = "=0.1.0"
either = "=1.5.3"
fixedbitset = "=0.2.0"
getrandom = "=0.1.14"
im-rc = "=14.3.0"
indexmap = "=1.9.1"
itertools = "=0.9.0"
itertools-num = "=0.1.3"
lazy_static = "=1.4.0"
libm = "=0.2.1"
maplit = "=1.0.2"
nalgebra = "=0.20.0"
ndarray = "=0.13.0"
num = "=0.2.1"
num-bigint = "=0.2.6"
num-complex = "=0.2.4"
num-derive = "=0.3.0"
num-integer = "=0.1.42"
num-iter = "=0.1.40"
num-rational = "=0.2.4"
num-traits = "=0.2.11"
ordered-float = "=1.0.2"
permutohedron = "=0.2.4"
petgraph = "=0.5.0"
proconio = {version = "=0.3.6", features = ["derive"]}
rand = {version = "=0.7.3", features = ["small_rng"]}
rand_chacha = "=0.2.2"
rand_core = "=0.5.1"
rand_distr = "=0.2.2"
rand_hc = "=0.2.0"
rand_pcg = "=0.2.1"
regex = "=1.3.6"
rustc-hash = "=1.1.0"
smallvec = "=1.2.0"
superslice = "=1.0.0"
text_io = "=0.1.8"
whiteread = "=0.5.0"

[[bin]]
name = "abc001-a"
path = "src/bin/abc-a/abc001-a.rs"

[[bin]]
name = "abc002-a"
path = "src/bin/abc-a/abc002-a.rs"

[[bin]]
name = "abc003-a"
path = "src/bin/abc-a/abc003-a.rs"

[[bin]]
name = "abc004-a"
path = "src/bin/abc-a/abc004-a.rs"

[[bin]]
name = "abc005-a"
path = "src/bin/abc-a/abc005-a.rs"

[[bin]]
name = "abc006-a"
path = "src/bin/abc-a/abc006-a.rs"

[[bin]]
name = "abc007-a"
path = "src/bin/abc-a/abc007-a.rs"

[[bin]]
name = "abc008-a"
path = "src/bin/abc-a/abc008-a.rs"

[[bin]]
name = "abc009-a"
path = "src/bin/abc-a/abc009-a.rs"

[[bin]]
name = "abc010-a"
path = "src/bin/abc-a/abc010-a.rs"

[[bin]]
name = "abc011-a"
path = "src/bin/abc-a/abc011-a.rs"

[[bin]]
name = "abc012-a"
path = "src/bin/abc-a/abc012-a.rs"

[[bin]]
name = "abc013-a"
path = "src/bin/abc-a/abc013-a.rs"

[[bin]]
name = "abc014-a"
path = "src/bin/abc-a/abc014-a.rs"

[[bin]]
name = "abc015-a"
path = "src/bin/abc-a/abc015-a.rs"

[[bin]]
name = "abc016-a"
path = "src/bin/abc-a/abc016-a.rs"

[[bin]]
name = "abc017-a"
path = "src/bin/abc-a/abc017-a.rs"

[[bin]]
name = "abc018-a"
path = "src/bin/abc-a/abc018-a.rs"

[[bin]]
name = "abc019-a"
path = "src/bin/abc-a/abc019-a.rs"

[[bin]]
name = "abc020-a"
path = "src/bin/abc-a/abc020-a.rs"

[[bin]]
name = "abc021-a"
path = "src/bin/abc-a/abc021-a.rs"

[[bin]]
name = "abc022-a"
path = "src/bin/abc-a/abc022-a.rs"

[[bin]]
name = "abc023-a"
path = "src/bin/abc-a/abc023-a.rs"

[[bin]]
name = "abc024-a"
path = "src/bin/abc-a/abc024-a.rs"

[[bin]]
name = "abc025-a"
path = "src/bin/abc-a/abc025-a.rs"

[[bin]]
name = "abc026-a"
path = "src/bin/abc-a/abc026-a.rs"

[[bin]]
name = "abc027-a"
path = "src/bin/abc-a/abc027-a.rs"

[[bin]]
name = "abc028-a"
path = "src/bin/abc-a/abc028-a.rs"

[[bin]]
name = "abc029-a"
path = "src/bin/abc-a/abc029-a.rs"

[[bin]]
name = "abc030-a"
path = "src/bin/abc-a/abc030-a.rs"

[[bin]]
name = "abc031-a"
path = "src/bin/abc-a/abc031-a.rs"

[[bin]]
name = "abc032-a"
path = "src/bin/abc-a/abc032-a.rs"

[[bin]]
name = "abc033-a"
path = "src/bin/abc-a/abc033-a.rs"

[[bin]]
name = "abc034-a"
path = "src/bin/abc-a/abc034-a.rs"

[[bin]]
name = "abc035-a"
path = "src/bin/abc-a/abc035-a.rs"

[[bin]]
name = "abc036-a"
path = "src/bin/abc-a/abc036-a.rs"

[[bin]]
name = "abc037-a"
path = "src/bin/abc-a/abc037-a.rs"

[[bin]]
name = "abc038-a"
path = "src/bin/abc-a/abc038-a.rs"

[[bin]]
name = "abc039-a"
path = "src/bin/abc-a/abc039-a.rs"

[[bin]]
name = "abc040-a"
path = "src/bin/abc-a/abc040-a.rs"

[[bin]]
name = "abc041-a"
path = "src/bin/abc-a/abc041-a.rs"

[[bin]]
name = "abc042-a"
path = "src/bin/abc-a/abc042-a.rs"

[[bin]]
name = "abc043-a"
path = "src/bin/abc-a/abc043-a.rs"

[[bin]]
name = "abc044-a"
path = "src/bin/abc-a/abc044-a.rs"

[[bin]]
name = "abc045-a"
path = "src/bin/abc-a/abc045-a.rs"

[[bin]]
name = "abc046-a"
path = "src/bin/abc-a/abc046-a.rs"

[[bin]]
name = "abc047-a"
path = "src/bin/abc-a/abc047-a.rs"

[[bin]]
name = "abc048-a"
path = "src/bin/abc-a/abc048-a.rs"

[[bin]]
name = "abc049-a"
path = "src/bin/abc-a/abc049-a.rs"

[[bin]]
name = "abc050-a"
path = "src/bin/abc-a/abc050-a.rs"

[[bin]]
name = "abc051-a"
path = "src/bin/abc-a/abc051-a.rs"

[[bin]]
name = "abc052-a"
path = "src/bin/abc-a/abc052-a.rs"

[[bin]]
name = "abc053-a"
path = "src/bin/abc-a/abc053-a.rs"

[[bin]]
name = "abc054-a"
path = "src/bin/abc-a/abc054-a.rs"

[[bin]]
name = "abc055-a"
path = "src/bin/abc-a/abc055-a.rs"

[[bin]]
name = "abc056-a"
path = "src/bin/abc-a/abc056-a.rs"

[[bin]]
name = "abc057-a"
path = "src/bin/abc-a/abc057-a.rs"

[[bin]]
name = "abc058-a"
path = "src/bin/abc-a/abc058-a.rs"

[[bin]]
name = "abc059-a"
path = "src/bin/abc-a/abc059-a.rs"

[[bin]]
name = "abc060-a"
path = "src/bin/abc-a/abc060-a.rs"

[[bin]]
name = "abc061-a"
path = "src/bin/abc-a/abc061-a.rs"

[[bin]]
name = "abc062-a"
path = "src/bin/abc-a/abc062-a.rs"

[[bin]]
name = "abc063-a"
path = "src/bin/abc-a/abc063-a.rs"

[[bin]]
name = "abc064-a"
path = "src/bin/abc-a/abc064-a.rs"

[[bin]]
name = "abc065-a"
path = "src/bin/abc-a/abc065-a.rs"

[[bin]]
name = "abc066-a"
path = "src/bin/abc-a/abc066-a.rs"

[[bin]]
name = "abc067-a"
path = "src/bin/abc-a/abc067-a.rs"

[[bin]]
name = "abc068-a"
path = "src/bin/abc-a/abc068-a.rs"

[[bin]]
name = "abc069-a"
path = "src/bin/abc-a/abc069-a.rs"

[[bin]]
name = "abc070-a"
path = "src/bin/abc-a/abc070-a.rs"

[[bin]]
name = "abc071-a"
path = "src/bin/abc-a/abc071-a.rs"

[[bin]]
name = "abc072-a"
path = "src/bin/abc-a/abc072-a.rs"

[[bin]]
name = "abc073-a"
path = "src/bin/abc-a/abc073-a.rs"

[[bin]]
name = "abc074-a"
path = "src/bin/abc-a/abc074-a.rs"

[[bin]]
name = "abc075-a"
path = "src/bin/abc-a/abc075-a.rs"

[[bin]]
name = "abc076-a"
path = "src/bin/abc-a/abc076-a.rs"

[[bin]]
name = "abc077-a"
path = "src/bin/abc-a/abc077-a.rs"

[[bin]]
name = "abc078-a"
path = "src/bin/abc-a/abc078-a.rs"

[[bin]]
name = "abc079-a"
path = "src/bin/abc-a/abc079-a.rs"

[[bin]]
name = "abc080-a"
path = "src/bin/abc-a/abc080-a.rs"

[[bin]]
name = "abc081-a"
path = "src/bin/abc-a/abc081-a.rs"

[[bin]]
name = "abc082-a"
path = "src/bin/abc-a/abc082-a.rs"

[[bin]]
name = "abc083-a"
path = "src/bin/abc-a/abc083-a.rs"

[[bin]]
name = "abc084-a"
path = "src/bin/abc-a/abc084-a.rs"

[[bin]]
name = "abc085-a"
path = "src/bin/abc-a/abc085-a.rs"

[[bin]]
name = "abc086-a"
path = "src/bin/abc-a/abc086-a.rs"

[[bin]]
name = "abc087-a"
path = "src/bin/abc-a/abc087-a.rs"

[[bin]]
name = "abc088-a"
path = "src/bin/abc-a/abc088-a.rs"

[[bin]]
name = "abc089-a"
path = "src/bin/abc-a/abc089-a.rs"

[[bin]]
name = "abc090-a"
path = "src/bin/abc-a/abc090-a.rs"

[[bin]]
name = "abc091-a"
path = "src/bin/abc-a/abc091-a.rs"

[[bin]]
name = "abc092-a"
path = "src/bin/abc-a/abc092-a.rs"

[[bin]]
name = "abc093-a"
path = "src/bin/abc-a/abc093-a.rs"

[[bin]]
name = "abc094-a"
path = "src/bin/abc-a/abc094-a.rs"

[[bin]]
name = "abc095-a"
path = "src/bin/abc-a/abc095-a.rs"

[[bin]]
name = "abc096-a"
path = "src/bin/abc-a/abc096-a.rs"

[[bin]]
name = "abc097-a"
path = "src/bin/abc-a/abc097-a.rs"

[[bin]]
name = "abc098-a"
path = "src/bin/abc-a/abc098-a.rs"

[[bin]]
name = "abc099-a"
path = "src/bin/abc-a/abc099-a.rs"

[[bin]]
name = "abc100-a"
path = "src/bin/abc-a/abc100-a.rs"

[[bin]]
name = "abc101-a"
path = "src/bin/abc-a/abc101-a.rs"

[[bin]]
name = "abc102-a"
path = "src/bin/abc-a/abc102-a.rs"

[[bin]]
name = "abc103-a"
path = "src/bin/abc-a/abc103-a.rs"

[[bin]]
name = "abc104-a"
path = "src/bin/abc-a/abc104-a.rs"

[[bin]]
name = "abc105-a"
path = "src/bin/abc-a/abc105-a.rs"

[[bin]]
name = "abc106-a"
path = "src/bin/abc-a/abc106-a.rs"

[[bin]]
name = "abc107-a"
path = "src/bin/abc-a/abc107-a.rs"

[[bin]]
name = "abc108-a"
path = "src/bin/abc-a/abc108-a.rs"

[[bin]]
name = "abc109-a"
path = "src/bin/abc-a/abc109-a.rs"

[[bin]]
name = "abc110-a"
path = "src/bin/abc-a/abc110-a.rs"

[[bin]]
name = "abc111-a"
path = "src/bin/abc-a/abc111-a.rs"

[[bin]]
name = "abc112-a"
path = "src/bin/abc-a/abc112-a.rs"

[[bin]]
name = "abc113-a"
path = "src/bin/abc-a/abc113-a.rs"

[[bin]]
name = "abc114-a"
path = "src/bin/abc-a/abc114-a.rs"

[[bin]]
name = "abc115-a"
path = "src/bin/abc-a/abc115-a.rs"

[[bin]]
name = "abc116-a"
path = "src/bin/abc-a/abc116-a.rs"

[[bin]]
name = "abc117-a"
path = "src/bin/abc-a/abc117-a.rs"

[[bin]]
name = "abc118-a"
path = "src/bin/abc-a/abc118-a.rs"

[[bin]]
name = "abc119-a"
path = "src/bin/abc-a/abc119-a.rs"

[[bin]]
name = "abc120-a"
path = "src/bin/abc-a/abc120-a.rs"

[[bin]]
name = "abc121-a"
path = "src/bin/abc-a/abc121-a.rs"

[[bin]]
name = "abc122-a"
path = "src/bin/abc-a/abc122-a.rs"

[[bin]]
name = "abc123-a"
path = "src/bin/abc-a/abc123-a.rs"

[[bin]]
name = "abc124-a"
path = "src/bin/abc-a/abc124-a.rs"

[[bin]]
name = "abc125-a"
path = "src/bin/abc-a/abc125-a.rs"

[[bin]]
name = "abc126-a"
path = "src/bin/abc-a/abc126-a.rs"

[[bin]]
name = "abc127-a"
path = "src/bin/abc-a/abc127-a.rs"

[[bin]]
name = "abc128-a"
path = "src/bin/abc-a/abc128-a.rs"

[[bin]]
name = "abc129-a"
path = "src/bin/abc-a/abc129-a.rs"

[[bin]]
name = "abc130-a"
path = "src/bin/abc-a/abc130-a.rs"

[[bin]]
name = "abc131-a"
path = "src/bin/abc-a/abc131-a.rs"

[[bin]]
name = "abc132-a"
path = "src/bin/abc-a/abc132-a.rs"

[[bin]]
name = "abc133-a"
path = "src/bin/abc-a/abc133-a.rs"

[[bin]]
name = "abc134-a"
path = "src/bin/abc-a/abc134-a.rs"

[[bin]]
name = "abc135-a"
path = "src/bin/abc-a/abc135-a.rs"

[[bin]]
name = "abc136-a"
path = "src/bin/abc-a/abc136-a.rs"

[[bin]]
name = "abc137-a"
path = "src/bin/abc-a/abc137-a.rs"

[[bin]]
name = "abc138-a"
path = "src/bin/abc-a/abc138-a.rs"

[[bin]]
name = "abc139-a"
path = "src/bin/abc-a/abc139-a.rs"

[[bin]]
name = "abc140-a"
path = "src/bin/abc-a/abc140-a.rs"

[[bin]]
name = "abc141-a"
path = "src/bin/abc-a/abc141-a.rs"

[[bin]]
name = "abc142-a"
path = "src/bin/abc-a/abc142-a.rs"

[[bin]]
name = "abc143-a"
path = "src/bin/abc-a/abc143-a.rs"

[[bin]]
name = "abc144-a"
path = "src/bin/abc-a/abc144-a.rs"

[[bin]]
name = "abc145-a"
path = "src/bin/abc-a/abc145-a.rs"

[[bin]]
name = "abc146-a"
path = "src/bin/abc-a/abc146-a.rs"

[[bin]]
name = "abc147-a"
path = "src/bin/abc-a/abc147-a.rs"

[[bin]]
name = "abc148-a"
path = "src/bin/abc-a/abc148-a.rs"

[[bin]]
name = "abc149-a"
path = "src/bin/abc-a/abc149-a.rs"

[[bin]]
name = "abc150-a"
path = "src/bin/abc-a/abc150-a.rs"

[[bin]]
name = "abc150-d"
path = "src/bin/abc-d/abc150-d.rs"

[[bin]]
name = "abc151-d"
path = "src/bin/abc-d/abc151-d.rs"

[[bin]]
name = "abc152-d"
path = "src/bin/abc-d/abc152-d.rs"

[[bin]]
name = "abc153-d"
path = "src/bin/abc-d/abc153-d.rs"

[[bin]]
name = "abc154-d"
path = "src/bin/abc-d/abc154-d.rs"

[[bin]]
name = "abc155-d"
path = "src/bin/abc-d/abc155-d.rs"

[[bin]]
name = "abc156-d"
path = "src/bin/abc-d/abc156-d.rs"

[[bin]]
name = "abc157-d"
path = "src/bin/abc-d/abc157-d.rs"

[[bin]]
name = "abc158-d"
path = "src/bin/abc-d/abc158-d.rs"

[[bin]]
name = "abc159-d"
path = "src/bin/abc-d/abc159-d.rs"

[[bin]]
name = "abc160-d"
path = "src/bin/abc-d/abc160-d.rs"

[[bin]]
name = "abc161-d"
path = "src/bin/abc-d/abc161-d.rs"

[[bin]]
name = "abc162-d"
path = "src/bin/abc-d/abc162-d.rs"

[[bin]]
name = "abc163-d"
path = "src/bin/abc-d/abc163-d.rs"

[[bin]]
name = "abc164-d"
path = "src/bin/abc-d/abc164-d.rs"

[[bin]]
name = "abc165-d"
path = "src/bin/abc-d/abc165-d.rs"

[[bin]]
name = "abc166-d"
path = "src/bin/abc-d/abc166-d.rs"
